etcd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: catcode
spec:
  ports:
    - port: 80
      targetPort: 2379
  selector:
    app: etcd
