etcd/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: etcd-ingress
  namespace: catcode
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`etcd.mw.local`)
      kind: Rule
      services:
        - name: etcd
          port: 80
